@@ -2,15 +2,15 @@ Manifest-Version: 1.0
 Bundle-ManifestVersion: 2
 Bundle-Name: NXSL Plug-in
 Bundle-SymbolicName: org.netxms.ui.eclipse.nxsl;singleton:=true
-Bundle-Version: 2.0.5
+Bundle-Version: 2.0.7
 Bundle-Activator: org.netxms.ui.eclipse.nxsl.Activator
 Bundle-Vendor: netxms.org
 Require-Bundle: org.eclipse.ui;bundle-version="3.8.2",
  org.eclipse.core.runtime;bundle-version="3.8.0",
  org.eclipse.jface.text;bundle-version="3.8.2",
  org.eclipse.ui.workbench.texteditor;bundle-version="3.8.0",
- org.netxms.ui.eclipse.clientlibrary;bundle-version="2.0.6",
- org.netxms.ui.eclipse.console;bundle-version="2.0.5",
+ org.netxms.ui.eclipse.clientlibrary;bundle-version="2.0.7",
+ org.netxms.ui.eclipse.console;bundle-version="2.0.7",
  org.eclipse.ui.forms;bundle-version="3.5.200",
  org.eclipse.ui.console;bundle-version="3.5.100"
 Bundle-RequiredExecutionEnvironment: JavaSE-1.6
