@@ -114,7 +114,7 @@ public class AutoBind extends PropertyPage
       gd.verticalIndent = WidgetHelper.DIALOG_SPACING;
 		label.setLayoutData(gd);
       
-      filterSource = new ScriptEditor(dialogArea, SWT.BORDER, SWT.H_SCROLL | SWT.V_SCROLL);
+      filterSource = new ScriptEditor(dialogArea, SWT.BORDER, SWT.H_SCROLL | SWT.V_SCROLL, true, "Variables:\r\n\t$node\tnode being tested.\n\nReturn value: true to bind node to this container.");
 		filterSource.setText(object.getAutoBindFilter());
 		filterSource.setEnabled(object.isAutoBindEnabled());
 		
